# fincen-streamlit-cloud

./: .gitignore  advisory_crawler.py  alerts_notices_crawler.py  fincen_advisories.csv  fincen_advisory_summaries.csv  fincen_alerts.csv  fincen_build_fraud_dictionary.py  fincen_fraud_mapping.csv  fincen_fraud_mapping_details.json  fincen_keyword_locations.csv  fincen_notices.csv  fincen_ocr_fraud_mapper.py  fincen_publications_crawler.py  fincen_summaries.csv  fincen_summaries.json  fincen_summary_generator.py  fincen_text_extractor.py  json_to_csv_summaries.py  modal_app.py  processing_state.json  pyproject.toml  requirements.txt  streamlit_app.py  supabase_helpers.py  upload_to_supabase.py
backups_legacy_mapper/: fincen_fraud_mapping.csv  fincen_keyword_locations.csv
legacy/: fincen_grabber.py  fincen_grabber_readme.txt  main.py  pipeline.py
legacy/src_baseline/: extract_text.py  fraud_detector.py  indicator_miner.py  scrape_fincen.py
